# pyopath

./: .gitignore  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_LOG.md  README.md  RUST_PYTHON_COMPARISON.md  pyopath.pyi  pyproject.toml
docs/: ARCHITECTURE.md  COMPATIBILITY.md  DEVELOPMENT.md  ROADMAP.md
reference/: __init__.py  __init__.pyi  _local.py  types.py
scripts/: __init__.py  benchmark.py  check_signatures.py  main.py
scripts/data/: benchmark_results.ndjson  missing_in_pyopath.ndjson  signature_differences.ndjson
src/: core.rs  glob_iter.rs  lib.rs  macros.rs  parsing.rs  path.rs  pure_path.rs  separators.rs  stats.rs
src/path/: mod.rs  path.rs  posix_path.rs  windows_path.rs
src/pure_path/: flavor.rs  mod.rs  parsing.rs  pure_path.rs  pure_posix_path.rs  pure_windows_path.rs
src/pyopath/: __init__.py  __init__.pyi  _os.py  types.py
tests/: __init__.py  test_path.py  test_pure_path.py  test_unc_paths.py
