[project]
    dependencies    = []
    description     = "Pathlib in Rust"
    name            = "pyopath"
    readme          = "README.md"
    requires-python = ">=3.14"
    version         = "0.1.0"

[dependency-groups]
    dev = ["polars>=1.36.1", "pyochain>=0.6.1.51"]
[tool.ruff]
    lint.ignore = [
        "C417",
        "COM812",
        "COM812",
        "D401",
        "E501",
        "FIX002",
        "PLC0415",
        "S101",
        "S608",
        "SLF001",
        "T201",
        "TC003",
        "TC006",
        "TD002",
        "TD003",
        "TID252",
    ]
    lint.select = ["ALL"]
    [tool.ruff.format]
        docstring-code-format = true
    [tool.ruff.lint.pydocstyle]
        convention = "google"
