[project]
    description     = "Pathlib in Rust"
    name            = "pyopath"
    readme          = "README.md"
    requires-python = ">=3.13"
    version         = "0.1.0"

[build-system]
    build-backend = "maturin"
    requires      = ["maturin>=1.8,<2.0"]

[tool.maturin]
    features = ["pyo3/extension-module"]

[dependency-groups]
    dev = [
        "maturin>=1.8",
        "polars>=1.36.1",
        "pyochain>=0.6.1.51",
        "pytest>=8.0",
    ]

[tool.ruff]
    lint.ignore = [
        "C417",
        "COM812",
        "COM812",
        "D401",
        "E501",
        "FIX002",
        "PLC0415",
        "PYI021",
        "S101",
        "S608",
        "SLF001",
        "T201",
        "TC003",
        "TC006",
        "TD002",
        "TD003",
        "TID252",
    ]
    lint.select = ["ALL"]
    [tool.ruff.format]
        docstring-code-format = true
    [tool.ruff.lint.pydocstyle]
        convention = "google"
